Remove preview flags in anticipation of Java 16