@@ -45,20 +45,7 @@ eclipse {
 
 // Configure module version
 tasks.withType<JavaCompile> {
-
-	// Set module version
 	options.javaModuleVersion.set(provider { project.version as String })
-
-	// Enable preview features
-	options.compilerArgs.addAll(listOf("--source", "15", "--enable-preview"))
-}
-
-tasks.withType<Test> {
-	jvmArgs("--enable-preview")
-}
-
-tasks.withType<JavaExec> {
-	jvmArgs("--enable-preview")
 }
 
 // Add repository configuration
